update release notes

--- a/pronom/default.htm
+++ b/pronom/default.htm
@@ -63,7 +63,7 @@
 <table width="100%" cellpadding="0" cellspacing="0">
   <tr>
     <td width="2%">&nbsp;</td>
-     <td valign="top"><div id="breadcrumb">You are here: <a href="/" class="breadcrumbs">Home</a> &gt; <a href="/information-management/" class="breadcrumbs">Information management</a> &gt; <a href="/information-management/projects-and-work.htm" class="breadcrumbs">Our projects and work</a> &gt; <a href="/information-management/projects-and-work/digital-preservation.htm" class="breadcrumbs">Digital preservation </a> &gt; <a href="/pronom" class="breadcrumbs">PRONOM</a> &gt; About </div></td>
+     <td valign="top"><div id="breadcrumb">You are here: <a href="/" class="breadcrumbs">Home</a> &gt; <a href="/information-management/" class="breadcrumbs">Information management</a> &gt; <a href="https://www.nationalarchives.gov.uk/information-management/manage-information/preserving-digital-records/"	 class="breadcrumbs">Digital preservation </a> &gt; <a href="/pronom" class="breadcrumbs">PRONOM</a> &gt; About </div></td>
     <td width="2%">&nbsp;</td>
   </tr>
   <tr>
@@ -209,25 +209,6 @@
       <br />Microsoft Corporation
       <br />National Software Reference Library (US National Institute for Standards and Technology)
       </p>
-      <!--h3><a name="links" id="links"></a>Links: Information on file formats</h3>
-      <p class="mainbodytext"><a href="http://www.devsearcher.com/category.php3?parent=Data_Formats" target="_blank">Dr Dobbs DevSearcher: data formats<img src="/images/icons/wwwlink.gif" width="18" height="12" alt="External link - opens in a new window" border="0" /></a>
-      <br /><a href="http://www.daubnet.com/formats/" target="_blank">Daubnet File Format Specifications<img src="/images/icons/wwwlink.gif" width="18" height="12" alt="External link - opens in a new window" border="0" /></a>
-      <br /><a href="http://netghost.afti.nsu.ru/gff/graphics/formats_en.html" target="_blank">Encyclopedia of graphics file formats<img src="/images/icons/wwwlink.gif" width="18" height="12" alt="External link - opens in a new window" border="0" /></a>
-      <br /><a href="http://www.file-ext.com/" target="_blank">File Extensions<img src="/images/icons/wwwlink.gif" width="18" height="12" alt="External link - opens in a new window" border="0" /></a>
-      <br /><a href="http://www.filespecs.com/index.jsp" target="_blank">Filespecs.com<img src="/images/icons/wwwlink.gif" width="18" height="12" alt="External link - opens in a new window" border="0" /></a>
-      <br /><a href="http://www.faqs.org/faqs/graphics/fileformats-faq/part1/preamble.html">Graphics file formats FAQs<img src="/images/icons/wwwlink.gif" width="18" height="12" alt="External link - opens in a new window" border="0" /></a>
-      <br /><a href="http://myfileformats.com/?lnk=modules&amp;fig=enriched.html" target="_blank">My File Formats<img src="/images/icons/wwwlink.gif" width="18" height="12" alt="External link - opens in a new window" border="0" /></a>
-      <br /><a href="http://www.dcs.ed.ac.uk/home/mxr/gfx/" target="_blank">The Graphics file formats page<img src="/images/icons/wwwlink.gif" width="18" height="12" alt="External link - opens in a new window" border="0" /></a>
-      <br /><a href="http://www.silicon-alley.com/ext/index.html" target="_blank">The incomplete dictionary of filename extensions<img src="/images/icons/wwwlink.gif" width="18" height="12" alt="External link - opens in a new window" border="0" /></a>
-      <br /><a href="http://webopedia.internet.com/quick_ref/fileextensions.asp" target="_blank">Webopedia: Data formats and their file extensions<img src="/images/icons/wwwlink.gif" width="18" height="12" alt="External link - opens in a new window" border="0" /></a>
-      <br /><a href="http://whatis.techtarget.com/fileFormatA/0,289933,sid9,00.html" target="_blank">Whatis?: Every file format in the world<img src="/images/icons/wwwlink.gif" width="18" height="12" alt="External link - opens in a new window" border="0" /></a>
-      <br /><a href="http://www.wotsit.org/" target="_blank">Wotsits Format: the programmers resource<img src="/images/icons/wwwlink.gif" width="18" height="12" alt="External link - opens in a new window" border="0" /></a></p>
-      <h3>Links: Other projects</h3>
-      <p class="mainbodytext"><a href="http://hul.harvard.edu/formatregistry/" target="_blank">Global Registry for Digital Format Representation Information<img src="/images/icons/wwwlink.gif" width="18" height="12" alt="External link - opens in a new window" border="0" /></a>
-      <br />
-      <a href="http://www.jisc.ac.uk/uploaded_documents/FileFormatsreport.pdf" target="_blank">JISC
-      survey and assessment of sources of information on file formats and software
-      documentation: Final Report <img src="/images/icons/pdf.gif" width="20" height="16" alt="PDF document, opens in a new window" border="0" /></a></p-->
       <p>&nbsp;</p>
 	  <p class="mainbodytext">This page contains PDF files. See <a href="/help/plug-ins-and-file-formats.htm" title="Link to help - opens in a new window" onkeypress="this.onclick()" onclick="PRO_openPopupWindow('/help/plug-ins-and-file-formats.htm','popup','650','400','toolbar=yes,menubar=yes,scrollbars=yes,resizable=yes','yes');return false;" target="popup" >plug-ins and file formats</a> for help in accessing these file types.</p></td>
     <td>&nbsp;</td>
