--- a/pronom/droid-signature-files.htm
+++ b/pronom/droid-signature-files.htm
@@ -212,6 +212,7 @@
           <a href="/documents/container-signature-20180920.xml">20 September 2018</a><br />
           <a href="/documents/container-signature-20200121.xml">21 January 2020</a><br />
           <a href="/documents/container-signature-20201001.xml">1 October 2020</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20211027.xml">27 October 2021</a><br />
         </p>
 
 
