--- a/pronom/droid-signature-files.htm
+++ b/pronom/droid-signature-files.htm
@@ -49,7 +49,7 @@
   <table width="100%" cellpadding="0" cellspacing="0">
     <tr>
       <td width="2%">&nbsp;</td>
-      <td valign="top"><div id="breadcrumb">You are here: <a href="/" class="breadcrumbs">Home</a> &gt; <a href="/information-management/" class="breadcrumbs">Information management </a> &gt; <a href="/information-management/projects-and-work.htm" class="breadcrumbs">Our projects and work </a> &gt; <a href="/information-management/projects-and-work/digital-preservation.htm" class="breadcrumbs">Digital preservation</a> &gt; <a href="/pronom" class="breadcrumbs">PRONOM</a> &gt; DROID signature files </div></td>
+      <td valign="top"><div id="breadcrumb">You are here: <a href="/" class="breadcrumbs">Home</a> &gt; <a href="/information-management/" class="breadcrumbs">Information management </a> &gt; <a href="/information-management/manage-information/preserving-digital-records/" class="breadcrumbs">Digital preservation</a> &gt; <a href="/pronom" class="breadcrumbs">PRONOM</a> &gt; DROID signature files </div></td>
       <td width="2%">&nbsp;</td>
     </tr>
     <tr>
