--- a/pronom/tools.htm
+++ b/pronom/tools.htm
@@ -61,7 +61,7 @@
 <table width="100%" cellpadding="0" cellspacing="0">
   <tr>
     <td width="2%">&nbsp;</td>
-      <td valign="top"><div id="breadcrumb">You are here: <a href="/" class="breadcrumbs">Home</a> &gt; <a href="/information-management/" class="breadcrumbs">Information management</a> &gt; <a href="/information-management/projects-and-work.htm" class="breadcrumbs">Our projects and work</a> &gt; <a href="/information-management/projects-and-work/digital-preservation.htm" class="breadcrumbs">Digital preservation </a> &gt; <a href="/pronom" class="breadcrumbs">PRONOM</a> &gt; Information resources </div></td>
+      <td valign="top"><div id="breadcrumb">You are here: <a href="/" class="breadcrumbs">Home</a> &gt; <a href="/information-management/" class="breadcrumbs">Information management</a> &gt; <a href="/information-management/manage-information/preserving-digital-records/" class="breadcrumbs">Digital preservation </a> &gt; <a href="/pronom/" class="breadcrumbs">PRONOM</a> &gt; Information resources </div></td>
     <td width="2%">&nbsp;</td>
   </tr>
   <tr>
@@ -126,7 +126,7 @@
 	  
 	<p class="mainbodytext">DROID (Digital Record Object Identification) is a software tool developed by The National Archives to perform automated batch identification of file formats. It is the first in a planned series of tools developed by The National Archives under the umbrella of its PRONOM technical registry service.</p>
 
-   <p class="mainbodytext">DROID is a platform-independent Java tool, which is freely available to download under an open source license. You can <a href="/information-management/projects-and-work/droid.htm" >download the latest version of DROID for free</a>.</p>
+   <p class="mainbodytext">DROID is a platform-independent Java tool, which is freely available to download under an open source license. You can <a href="/information-management/manage-information/preserving-digital-records/droid/" >download the latest version of DROID for free</a>.</p>
    <p class="mainbodytext"><a href="http://www.nationalarchives.gov.uk/pronom/sigdev/index.htm ">PRONOM: Signature Development Utility</a></p>
    <p class="mainbodytext">This tool allows you to create signatures which can be tested using <a href="http://digital-preservation.github.com/droid/">DROID</a>, you can then send these signatures to be uploaded to PRONOM.</p>
    <p class="mainbodytext"></p>
