add signature files

--- a/pronom/droid-signature-files.htm
+++ b/pronom/droid-signature-files.htm
@@ -184,6 +184,8 @@
           <a href="/documents/DROID_SignatureFile_V95.xml" target="_blank">DROID Signature File V95</a><br />
           <a href="/documents/DROID_SignatureFile_V96.xml" target="_blank">DROID Signature File V96</a><br />
           <a href="/documents/DROID_SignatureFile_V97.xml" target="_blank">DROID Signature File V97</a><br />
+          <a href="/documents/DROID_SignatureFile_V99.xml" target="_blank">DROID Signature File V98</a><br />
+          <a href="/documents/DROID_SignatureFile_V99.xml" target="_blank">DROID Signature File V99</a><br />
         </p>
         <p class="mainbodytext"><strong>Container signatures</strong><br/>
           <a href="/documents/container-signature-20110114.xml">14 January 2011</a><br />
