--- a/pronom/droid-signature-files.htm
+++ b/pronom/droid-signature-files.htm
@@ -186,6 +186,7 @@
           <a href="/documents/DROID_SignatureFile_V97.xml" target="_blank">DROID Signature File V97</a><br />
           <a href="/documents/DROID_SignatureFile_V98.xml" target="_blank">DROID Signature File V98</a><br />
           <a href="/documents/DROID_SignatureFile_V99.xml" target="_blank">DROID Signature File V99</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V100.xml" target="_blank">DROID Signature File V100</a><br />
         </p>
         <p class="mainbodytext"><strong>Container signatures</strong><br/>
           <a href="/documents/container-signature-20110114.xml">14 January 2011</a><br />
@@ -215,6 +216,7 @@
           <a href="/documents/container-signature-20200121.xml">21 January 2020</a><br />
           <a href="/documents/container-signature-20201001.xml">1 October 2020</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20211027.xml">27 October 2021</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20211216.xml">16 December 2021</a><br />
         </p>
 
 
