--- a/pronom/droid-signature-files.htm
+++ b/pronom/droid-signature-files.htm
@@ -188,6 +188,7 @@
           <a href="/documents/DROID_SignatureFile_V99.xml" target="_blank">DROID Signature File V99</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V100.xml" target="_blank">DROID Signature File V100</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V101.xml" target="_blank">DROID Signature File V101</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V102.xml" target="_blank">DROID Signature File V102</a><br />
         </p>
         <p class="mainbodytext"><strong>Container signatures</strong><br/>
           <a href="/documents/container-signature-20110114.xml">14 January 2011</a><br />
