update release notes

--- a/pronom/droid-signature-files.htm
+++ b/pronom/droid-signature-files.htm
@@ -192,6 +192,7 @@
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V104.xml" target="_blank">DROID Signature File V104</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V105.xml" target="_blank">DROID Signature File V105</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V106.xml" target="_blank">DROID Signature File V106</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V107.xml" target="_blank">DROID Signature File V107</a><br />
         </p>
         <p class="mainbodytext"><strong>Container signatures</strong><br/>
           <a href="/documents/container-signature-20110114.xml">14 January 2011</a><br />
