--- a/pronom/droid-signature-files.htm
+++ b/pronom/droid-signature-files.htm
@@ -193,6 +193,7 @@
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V105.xml" target="_blank">DROID Signature File V105</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V106.xml" target="_blank">DROID Signature File V106</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V107.xml" target="_blank">DROID Signature File V107</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V108.xml" target="_blank">DROID Signature File V108</a><br />
         </p>
         <p class="mainbodytext"><strong>Container signatures</strong><br/>
           <a href="/documents/container-signature-20110114.xml">14 January 2011</a><br />
@@ -225,6 +226,7 @@
           <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20211216.xml">16 December 2021</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20220311.xml">11 March 2022</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20220704.xml">4 July 2022</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20220905.xml">5 September 2022</a><br />
         </p>
 
 
