--- a/pronom/droid-signature-files.htm
+++ b/pronom/droid-signature-files.htm
@@ -195,6 +195,8 @@
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V107.xml" target="_blank">DROID Signature File V107</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V108.xml" target="_blank">DROID Signature File V108</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V109.xml" target="_blank">DROID Signature File V109</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V110.xml" target="_blank">DROID Signature File V110</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V111.xml" target="_blank">DROID Signature File V111</a><br />
         </p>
         <p class="mainbodytext"><strong>Container signatures</strong><br/>
           <a href="/documents/container-signature-20110114.xml">14 January 2011</a><br />
@@ -229,6 +231,7 @@
           <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20220704.xml">4 July 2022</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20220905.xml">5 September 2022</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20221102.xml">2 November 2022</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20230307.xml">7 March 2023</a><br />
         </p>
 
 
