--- a/pronom/droid-signature-files.htm
+++ b/pronom/droid-signature-files.htm
@@ -198,6 +198,7 @@
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V110.xml" target="_blank">DROID Signature File V110</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V111.xml" target="_blank">DROID Signature File V111</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V112.xml" target="_blank">DROID Signature File V112</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V114.xml" target="_blank">DROID Signature File V114</a><br />
         </p>
         <p class="mainbodytext"><strong>Container signatures</strong><br/>
           <a href="/documents/container-signature-20110114.xml">14 January 2011</a><br />
@@ -234,6 +235,7 @@
           <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20221102.xml">2 November 2022</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20230316.xml">16 March 2023</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20230510.xml">10 May 2023</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20230822.xml">22 August 2023</a><br />
         </p>
 
 
