--- a/pronom/droid-signature-files.htm
+++ b/pronom/droid-signature-files.htm
@@ -199,6 +199,8 @@
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V111.xml" target="_blank">DROID Signature File V111</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V112.xml" target="_blank">DROID Signature File V112</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V114.xml" target="_blank">DROID Signature File V114</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V115.xml" target="_blank">DROID Signature File V115</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/DROID_SignatureFile_V116.xml" target="_blank">DROID Signature File V116</a><br />
         </p>
         <p class="mainbodytext"><strong>Container signatures</strong><br/>
           <a href="/documents/container-signature-20110114.xml">14 January 2011</a><br />
@@ -236,6 +238,8 @@
           <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20230316.xml">16 March 2023</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20230510.xml">10 May 2023</a><br />
           <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20230822.xml">22 August 2023</a><br />
+          <a href="https://cdn.nationalarchives.gov.uk/documents/container-signature-20231124.xml">24 November 2023</a><br />
+
         </p>
 
 
